<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
   <LinearLayout> android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_horizontal" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_your_bmi" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff33b5e5" android:layout_gravity="center_horizontal" android:id="@id/bmi_display_UI_bmi" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff6dcaec" android:layout_gravity="center_horizontal" android:id="@id/bmi_display_UI_description" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_horizontal" android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_your_bmr" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff33b5e5" android:layout_gravity="center_horizontal" android:id="@id/bmr_display_ui_bmr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_horizontal" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_your_tdee" />
    <TextView android:textAppearance="?android:textAppearanceLarge" android:textColor="#ff33b5e5" android:layout_gravity="center_horizontal" android:id="@id/bmr_display_ui_tdee" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
</LinearLayout>
</ScrollView>