<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/macro"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:padding="5.0dip" >

        <View
            android:id="@id/view1"
            android:layout_width="fill_parent"
            android:layout_height="2.0dip"
            android:layout_alignTop="@id/text_current_playback_title"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/textView"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_horizontal"
                android:text="@string/label_tdee"
                android:textAppearance="?android:textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/result_color" />
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=" "
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/label_goal"
            android:textAppearance="?android:textAppearanceMedium" />

        <Spinner
            android:id="@id/macro_goal_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:id="@id/macro_goal_section_calculated"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5.0dip" >

            <TextView
                android:id="@id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/label_goal_calories"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@id/macro_goal_calories_calculated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/result_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="5.0dip" >

            <Button
                android:id="@+id/btn_nutrtional_plan"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#635fd0"
                android:padding="5.0dip"
                android:text="@string/label_choose_nutrition_plan"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />

            <View
                android:id="@id/view1"
                android:layout_width="fill_parent"
                android:layout_height="2.0dip"
                android:layout_alignTop="@id/text_current_playback_title"
                android:background="@android:color/darker_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_back_profile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#635fd0"
            android:padding="5.0dip"
            android:text="Back To Profile"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>